--- a/NewGeneUI/.gitignore
+++ b/NewGeneUI/.gitignore
@@ -7,3 +7,4 @@
 /build-NewGene-Desktop_Qt_5_1_0_MSVC2012_32bit-Debug/
 /build-NewGene-Desktop_Qt_5_1_1_clang_64bit-Debug/
 /build-NewGene-Desktop_Qt_5_1_1_clang_64bit-Release/
+/build-NewGene-VS2013-Debug/
