--- a/NewGeneUI/.gitignore
+++ b/NewGeneUI/.gitignore
@@ -8,3 +8,4 @@
 /build-NewGene-Desktop_Qt_5_1_1_clang_64bit-Debug/
 /build-NewGene-Desktop_Qt_5_1_1_clang_64bit-Release/
 /build-NewGene-VS2013-Debug/
+/build-NewGene-VS2013-Release/
