--- a/NewGeneBackEnd/NewGeneBackEnd.vcxproj
+++ b/NewGeneBackEnd/NewGeneBackEnd.vcxproj
@@ -146,6 +146,7 @@
     <ClInclude Include="UIData\UIDataManager.h" />
     <ClInclude Include="Utilities\NewGeneException.h" />
     <ClInclude Include="Utilities\UUID.h" />
+    <ClInclude Include="Utilities\Validation.h" />
     <ClInclude Include="Utilities\WidgetIdentifier.h" />
   </ItemGroup>
   <ItemGroup>
@@ -219,6 +220,7 @@
     <ClCompile Include="UIData\UIDataManager.cpp" />
     <ClCompile Include="Utilities\NewGeneException.cpp" />
     <ClCompile Include="Utilities\UUID.cpp" />
+    <ClCompile Include="Utilities\Validation.cpp" />
     <ClCompile Include="Utilities\WidgetIdentifier.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
