En-route to implementing the low-level SQL for UPDATE OR INSERT bulk transfer, which includes a bit of enhancment of the Schema class to store a full widgetInstanceIdentifier for the DMU category primary key fields

--- a/NewGeneBackEnd/NewGeneBackEnd.vcxproj.filters
+++ b/NewGeneBackEnd/NewGeneBackEnd.vcxproj.filters
@@ -563,5 +563,8 @@
     <ClCompile Include="Utilities\TimeRangeHelper.cpp">
       <Filter>Source Files\Utilities</Filter>
     </ClCompile>
+    <ClCompile Include="Model\Tables\Table.cpp">
+      <Filter>Source Files\Model\Tables</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
