--- a/NewGeneBackEnd/NewGeneBackEnd.vcxproj
+++ b/NewGeneBackEnd/NewGeneBackEnd.vcxproj
@@ -167,6 +167,7 @@
     <ClCompile Include="Model\Tables\Import\Import.cpp" />
     <ClCompile Include="Model\Tables\Import\ImportDefinitions.cpp" />
     <ClCompile Include="Model\Tables\Schema.cpp" />
+    <ClCompile Include="Model\Tables\Table.cpp" />
     <ClCompile Include="Model\Tables\TableInstances\CMU.cpp" />
     <ClCompile Include="Model\Tables\TableInstances\DMU.cpp" />
     <ClCompile Include="Model\Tables\TableInstances\GeneralOptions.cpp" />
