All skeleton infrastructure in place for Manage VG pane.  Core implementation functions not implemented.  Does not build.

--- a/NewGeneBackEnd/NewGeneBackEnd.vcxproj.filters
+++ b/NewGeneBackEnd/NewGeneBackEnd.vcxproj.filters
@@ -569,5 +569,8 @@
     <ClCompile Include="UIAction\Controllers\Controller_UOA_Management.cpp">
       <Filter>Source Files\UIAction\Controllers</Filter>
     </ClCompile>
+    <ClCompile Include="UIAction\Controllers\Controller_VG_Management.cpp">
+      <Filter>Source Files\UIAction\Controllers</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
