--- a/NewGeneBackEnd/NewGeneBackEnd.vcxproj
+++ b/NewGeneBackEnd/NewGeneBackEnd.vcxproj
@@ -217,6 +217,7 @@
     <ClCompile Include="UIAction\Controllers\Controller_TimeRangeChange.cpp" />
     <ClCompile Include="UIAction\Controllers\Controller_UOA_Management.cpp" />
     <ClCompile Include="UIAction\Controllers\Controller_VariableGroupSetMemberSelectionChange.cpp" />
+    <ClCompile Include="UIAction\Controllers\Controller_VG_Management.cpp" />
     <ClCompile Include="UIAction\UIActionManager.cpp" />
     <ClCompile Include="UIData\DataChanges.cpp" />
     <ClCompile Include="UIData\DataWidgets.cpp" />
