More debugging code - a harrowing, 15-hour bug

--- a/NewGeneBackEnd/NewGeneBackEnd.vcxproj
+++ b/NewGeneBackEnd/NewGeneBackEnd.vcxproj
@@ -50,6 +50,7 @@
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <MinimalRebuild>false</MinimalRebuild>
       <DisableSpecificWarnings>4250;4996;4503</DisableSpecificWarnings>
+      <AdditionalOptions>/bigobj %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
