--- a/NewGeneBackEnd/NewGeneBackEnd.vcxproj.filters
+++ b/NewGeneBackEnd/NewGeneBackEnd.vcxproj.filters
@@ -127,10 +127,10 @@
     <Filter Include="Source Files\Model\Tables\Import">
       <UniqueIdentifier>{d8e12115-5dbd-4a1b-bae8-c296c6f15123}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\Model\RandomSampling">
+    <Filter Include="Header Files\Model\KadSampler">
       <UniqueIdentifier>{e8d6a72d-93a2-485f-828b-84cd43a7f9b2}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\Model\RandomSampling">
+    <Filter Include="Source Files\Model\KadSampler">
       <UniqueIdentifier>{6b4b4739-d7f6-429c-99e4-badc56b86329}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
@@ -351,8 +351,8 @@
     <ClInclude Include="Utilities\Semaphore.h">
       <Filter>Header Files\Utilities</Filter>
     </ClInclude>
-    <ClInclude Include="Model\RandomSampling\RandomSampling.h">
-      <Filter>Header Files\Model\RandomSampling</Filter>
+    <ClInclude Include="Model\KadSampler\KadSampler.h">
+      <Filter>Header Files\Model\KadSampler</Filter>
     </ClInclude>
     <ClInclude Include="Utilities\FastMap.h">
       <Filter>Header Files\Utilities</Filter>
@@ -590,8 +590,8 @@
     <ClCompile Include="Model\Tables\Fields.cpp">
       <Filter>Source Files\Model\Tables</Filter>
     </ClCompile>
-    <ClCompile Include="Model\RandomSampling\RandomSampling.cpp">
-      <Filter>Source Files\Model\RandomSampling</Filter>
+    <ClCompile Include="Model\KadSampler\KadSampler.cpp">
+      <Filter>Source Files\Model\KadSampler</Filter>
     </ClCompile>
     <ClCompile Include="Utilities\FastMap.cpp">
       <Filter>Source Files\Utilities</Filter>
