Quick & dirty memory pool to give a shot at stabilizing for NewGene the very, very erratic performance of Boost Pool

--- a/NewGeneBackEnd/NewGeneBackEnd.vcxproj
+++ b/NewGeneBackEnd/NewGeneBackEnd.vcxproj
@@ -149,6 +149,7 @@
     <ClInclude Include="UIData\UIDataManager.h" />
     <ClInclude Include="Utilities\FastMap.h" />
     <ClInclude Include="Utilities\NewGeneException.h" />
+    <ClInclude Include="Utilities\NewGeneMemoryPool.h" />
     <ClInclude Include="Utilities\Semaphore.h" />
     <ClInclude Include="Utilities\TimeRangeHelper.h" />
     <ClInclude Include="Utilities\UUID.h" />
@@ -231,6 +232,7 @@
     <ClCompile Include="UIData\UIDataManager.cpp" />
     <ClCompile Include="Utilities\FastMap.cpp" />
     <ClCompile Include="Utilities\NewGeneException.cpp" />
+    <ClCompile Include="Utilities\NewGeneMemoryPool.cpp" />
     <ClCompile Include="Utilities\TimeRangeHelper.cpp" />
     <ClCompile Include="Utilities\UUID.cpp" />
     <ClCompile Include="Utilities\Validation.cpp" />
