Ignore updated build directory

--- a/NewGeneUI/.gitignore
+++ b/NewGeneUI/.gitignore
@@ -9,3 +9,4 @@
 /build-NewGene-Desktop_Qt_5_1_1_clang_64bit-Release/
 /build-NewGene-VS2013-Debug/
 /build-NewGene-VS2013-Release/
+/build-NewGene-Desktop_Qt_5_3_MSVC2013_32bit-Debug/
