--- a/NewGeneUI/.gitignore
+++ b/NewGeneUI/.gitignore
@@ -10,3 +10,4 @@
 /build-NewGene-VS2013-Debug/
 /build-NewGene-VS2013-Release/
 /build-NewGene-Desktop_Qt_5_3_MSVC2013_32bit-Debug/
+/build-NewGene-Desktop_Qt_5_3_MSVC2013_32bit-Release/
