--- a/NewGeneUI/.gitignore
+++ b/NewGeneUI/.gitignore
@@ -12,3 +12,4 @@
 /build-NewGene-Desktop_Qt_5_3_MSVC2013_32bit-Debug/
 /build-NewGene-Desktop_Qt_5_3_MSVC2013_32bit-Release/
 /build-NewGene-Desktop_Qt_5_4_0_MSVC2013_32bit-Debug/
+/build-NewGene-Desktop_Qt_5_4_0_MSVC2013_32bit-Release/
