--- a/NewGeneUI/.gitignore
+++ b/NewGeneUI/.gitignore
@@ -15,3 +15,4 @@
 /build-NewGene-Desktop_Qt_5_4_0_MSVC2013_32bit-Release/
 /build-NewGene-Desktop_Qt_5_5_0_MSVC2013_32bit-Debug/
 /build-NewGene-Desktop_Qt_5_5_0_MSVC2013_32bit-Release/
+/build-NewGene-Desktop_Qt_5_5_1_MSVC2013_32bit-Debug/
