--- a/NewGeneUI/.gitignore
+++ b/NewGeneUI/.gitignore
@@ -17,3 +17,4 @@
 /build-NewGene-Desktop_Qt_5_5_0_MSVC2013_32bit-Release/
 /build-NewGene-Desktop_Qt_5_5_1_MSVC2013_32bit-Debug/
 /build-NewGene-Desktop_Qt_5_5_1_MSVC2013_32bit-Release/
+/build-NewGene-Desktop_Qt_5_7_0_clang_64bit-Debug/
